fix inconsistency with BaseDocumentChunk
